k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-saver
  namespace: video-saver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-saver
  template:
    metadata:
      labels:
        app: video-saver
    spec:
      containers:
        - name: video-saver
          image: registry.gitlab.com/liuzuocai/video-saver:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 256Mi
      imagePullSecrets:
        - name: regcred
