k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-saver
  namespace: video-saver
spec:
  selector:
    app: video-saver
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
